# PY_PKG_TEMPLATE3

./: Dockerfile  Dockerfile_ui  Jenkinsfile  JenkinsfileRemove  README.md  docker-compose.yml  docker-compose1.yml  init_setup.sh  init_setup_ui.sh  local_setup.sh  mkdocs.yml  pyproject.toml  pyproject_temp.toml  requirements.txt  requirements_dev.txt  requirements_ui_dev.txt  template.py  tox.ini  update_toml.sh  update_toml_py.py
.github/workflows/: ci.yml
src/snakesay/: INGEST.py  __main__.py  mysqldb.py  snake.py  strmlt_ui.py
src/snakesay/DATA/: SCP_TRAFFIC_FEED.txt
